画像機能を追加

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -58,7 +58,7 @@
                                     </div>
                                 <% end %>
                                 <!-- Product image-->
-                                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                                <%= image_tag product.image, class: "card-img-top" %>
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
