--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,9 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+                    <div class="col-md-6">
+                        <%= image_tag @product.image, class: "card-img-top mb-5 mb-md-0" %>
+                    </div>
                     <div class="col-md-6">
                         <div class="small mb-1"><%= @product.code %></div>
                         <h1 class="display-5 fw-bolder"><%= @product.name %></h1>
@@ -76,7 +78,7 @@
                                     </div>
                                 <% end %>
                                 <!-- Product image-->
-                                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                                <%= image_tag product.image, class: "card-img-top" %>
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
