N+1問題の解消、product_cardパーシャルを作成

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,38 +48,7 @@
     <section class="py-5">
       <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-          <% @products.each do |product| %>
-            <div class="col mb-5">
-              <div class="card h-100">
-                <!-- Sale badge-->
-                <% if product.sales_price %>
-                  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
-                    Sale
-                  </div>
-                <% end %>
-                <!-- Product image-->
-                <%= image_tag product.image, class: "card-img-top" %>
-                <!-- Product details-->
-                <div class="card-body p-4">
-                  <div class="text-center">
-                    <!-- Product name-->
-                    <h5 class="fw-bolder"><%= product.name %></h5>
-                    <!-- Product price-->
-                    <span class="text-muted text-decoration-line-through">
-                      <%= "¥#{product.normal_price}" if product.sales_price %>
-                    </span>
-                    ¥<%= product.sales_price ? product.sales_price : product.normal_price %>
-                  </div>
-                </div>
-                <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                  <div class="text-center">
-                    <%= link_to '詳細', product_path(product), class: 'btn btn-outline-dark mt-auto' %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <% end %>
+          <%= render partial: "product_card", collection: @products, as: :product %>
         </div>
       </div>
     </section>
