--- a/app/views/admin/products/_product_card.html.erb
+++ b/app/views/admin/products/_product_card.html.erb
@@ -25,7 +25,7 @@
     <!-- Product actions-->
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
       <div class="text-center">
-        <%= link_to '詳細', product_path(product), class: 'btn btn-outline-dark mt-auto' %>
+        <%= link_to '詳細', admin_product_path(product), class: 'btn btn-outline-dark mt-auto' %>
       </div>
     </div>
   </div>
