--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <%= link_to '一覧', products_path, class: 'nav-link' %>
+              <%= link_to '管理者', admin_products_path, class: 'nav-link' %>
             </li>
           </ul>
           <form class="d-flex">
