--- a/app/views/products/_product_card.html.erb
+++ b/app/views/products/_product_card.html.erb
@@ -8,7 +8,7 @@
     <% if product.image.attached? %>
       <%= image_tag(product.image, class: "card-img-top") %>
     <% else %>
-      <%= image_tag('default_image.jpeg', class: "card-img-top") %>
+      <%= image_tag(asset_path('default_image.jpeg'), class: "card-img-top") %>
     <% end %>
     <!-- Product details-->
     <div class="card-body p-4">
