--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -43,7 +43,7 @@
             <% if @product.image.attached? %>
               <%= image_tag(@product.image, class: "card-img-top mb-5 mb-md-0") %>
             <% else %>
-              <%= image_tag('default_image.jpeg', class: "card-img-top mb-5 mb-md-0") %>
+              <%= image_tag(asset_path('default_image.jpeg'), class: "card-img-top") %>
             <% end %>
           </div>
           <div class="col-md-6">
