--- a/app/views/products/_product_card.html.erb
+++ b/app/views/products/_product_card.html.erb
@@ -26,6 +26,7 @@
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
       <div class="text-center">
         <%= link_to '詳細', product_path(product), class: 'btn btn-outline-dark mt-auto' %>
+        <%= button_to 'カートに追加', cart_items_path(product_id: product.id, quantity: 1), method: :post, class: 'btn btn-outline-dark mt-2' %>
       </div>
     </div>
   </div>
