--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,13 +25,15 @@
               <%= link_to '一覧', products_path, class: 'nav-link' %>
             </li>
           </ul>
-          <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
+          <div class="d-flex">
+            <%= link_to carts_path, class: 'btn btn-outline-dark' do %>
               <i class="bi-cart-fill me-1"></i>
               Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-            </button>
-          </form>
+              <span class="badge bg-dark text-white ms-1 rounded-pill">
+                <%= @cart.total_quantity %>
+              </span>
+            <% end %>
+          </div>
         </div>
       </div>
     </nav>
@@ -57,11 +59,13 @@
             </div>
             <p class="lead"><%= @product.description %></p>
             <div class="d-flex">
-              <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-              <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                <i class="bi-cart-fill me-1"></i>
-                カートに追加
-              </button>
+              <%= form_with url: cart_items_path(product_id: @product.id), method: :post, local: true, class: "d-flex align-items-center" do |form| %>
+                <%= form.number_field :quantity, value: 1, class: 'form-control text-center me-3', style: 'max-width: 3rem' %>
+                <%= form.button class: 'btn btn-outline-dark flex-shrink-0' do %>
+                  <i class="bi-cart-fill me-1"></i>
+                  カートに追加
+                <% end %>
+              <% end %>
             </div>
           </div>
         </div>
