チェックアウト機能をメール送信以外実装

--- a/app/views/admin/products/_navbar.html.erb
+++ b/app/views/admin/products/_navbar.html.erb
@@ -8,10 +8,13 @@
           <%= link_to '一般', products_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to '一覧', admin_products_path, class: 'nav-link' %>
+          <%= link_to '商品一覧', admin_products_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to '登録', new_admin_product_path, class: 'nav-link' %>
+          <%= link_to '商品登録', new_admin_product_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to '明細一覧', orders_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
