--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ja" >
+<html lang="en" >
   <head>
     <title>Checkout example for Bootstrap</title>
     <link rel="canonical" href="https://getbootstrap.jp/docs/5.3/examples/checkout/">
@@ -28,7 +28,7 @@
     </nav>
     <div class="container">
       <div class="py-5 text-center">
-        <h2>Checkout form</h2>
+        <h2>チェックアウトフォーム</h2>
       </div>
       <div class="row">
         <div class="col-md-4 order-md-2 mb-4">
@@ -39,7 +39,7 @@
             </span>
           </h4>
           <ul class="list-group mb-3">
-            <% @cart.cart_items.each do |cart_item| %>
+            <% @cart.cart_items.order(:id).each do |cart_item| %>
               <% if cart_item.quantity > 0 %>
                 <li class="list-group-item d-flex justify-content-between lh-condensed align-items-center">
                   <%= render 'carts/cart_item', cart_item: cart_item %>
@@ -63,144 +63,57 @@
           </form>
         </div>
         <div class="col-md-8 order-md-1">
-          <h4 class="mb-3">Billing address</h4>
-          <form class="needs-validation" novalidate>
+          <h4 class="mb-3">請求先住所</h4>
+          <%= render 'common/error_messages', model: @user %>
+          <%= form_with model: @user, url: users_path, local: true do |form| %>
             <div class="row">
               <div class="col-md-6 mb-3">
-                <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
+                <%= form.label :first_name, '姓' %>
+                <%= form.text_field :first_name, class: 'form-control'%>
               </div>
               <div class="col-md-6 mb-3">
-                <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
+                <%= form.label :last_name, '名' %>
+                <%= form.text_field :last_name, class: 'form-control'%>
               </div>
             </div>
             <div class="mb-3">
-              <label for="username">Username</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">@</span>
-                </div>
-                <input type="text" class="form-control" id="username" placeholder="Username" required>
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
-              </div>
+              <%= form.label :user_name, 'ユーザーネーム' %>
+              <%= form.text_field :user_name, class: 'form-control'%>
             </div>
             <div class="mb-3">
-              <label for="email">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
+              <%= form.label :email, 'メールアドレス' %>
+              <%= form.text_field :email, class: 'form-control'%>
             </div>
             <div class="mb-3">
-              <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-              <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
+              <%= form.label :zip, '郵便番号' %>
+              <%= form.text_field :zip, class: 'form-control'%>
             </div>
             <div class="mb-3">
-              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+              <%= form.label :address, '住所' %>
+              <%= form.text_field :address, class: 'form-control'%>
             </div>
-            <div class="row">
-              <div class="col-md-5 mb-3">
-                <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" required>
-                  <option value="">Choose...</option>
-                  <option>United States</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please select a valid country.
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required>
-                  <option value="">Choose...</option>
-                  <option>California</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please provide a valid state.
-                </div>
-              </div>
-              <div class="col-md-3 mb-3">
-                <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required>
-                <div class="invalid-feedback">
-                  Zip code required.
-                </div>
-              </div>
+            <div class="mb-3">
+              <%= form.label :detail_address, '建物名や部屋番号' %>
+              <%= form.text_field :detail_address, class: 'form-control'%>
             </div>
-            <hr class="mb-4">
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="same-address">
-              <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
+            <div class="mb-3">
+              <%= form.label :name_of_card, 'カード名義人' %>
+              <%= form.text_field :name_of_card, class: 'form-control'%>
             </div>
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="save-info">
-              <label class="custom-control-label" for="save-info">Save this information for next time</label>
+            <div class="mb-3">
+              <%= form.label :card_number, 'カード番号' %>
+              <%= form.text_field :card_number, class: 'form-control'%>
             </div>
-            <hr class="mb-4">
-            <h4 class="mb-3">Payment</h4>
-            <div class="d-block my-3">
-              <div class="custom-control custom-radio">
-                <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                <label class="custom-control-label" for="credit">Credit card</label>
-              </div>
-              <div class="custom-control custom-radio">
-                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                <label class="custom-control-label" for="debit">Debit card</label>
-              </div>
-              <div class="custom-control custom-radio">
-                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                <label class="custom-control-label" for="paypal">PayPal</label>
-              </div>
+            <div class="mb-3">
+              <%= form.label :expiration, '有効期限' %>
+              <%= form.text_field :expiration, class: 'form-control'%>
             </div>
-            <div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="cc-name">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                <small class="text-muted">Full name as displayed on card</small>
-                <div class="invalid-feedback">
-                  Name on card is required
-                </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="cc-number">Credit card number</label>
-                <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                <div class="invalid-feedback">
-                  Credit card number is required
-                </div>
-              </div>
+            <div class="mb-3">
+              <%= form.label :cvv, 'セキュリティコード（CVV）' %>
+              <%= form.text_field :cvv, class: 'form-control'%>
             </div>
-            <div class="row">
-              <div class="col-md-3 mb-3">
-                <label for="cc-expiration">Expiration</label>
-                <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                <div class="invalid-feedback">
-                  Expiration date required
-                </div>
-              </div>
-              <div class="col-md-3 mb-3">
-                <label for="cc-cvv">CVV</label>
-                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                <div class="invalid-feedback">
-                  Security code required
-                </div>
-              </div>
-            </div>
-            <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-          </form>
+            <%= form.submit '購入する', class: 'btn btn-primary btn-lg btn-block', disabled: @cart.total_quantity.zero? %>
+          <% end %>
         </div>
       </div>
       <footer class="my-5 pt-5 text-muted text-center text-small">
