--- a/app/views/common/_error_messages.html.erb
+++ b/app/views/common/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if model.errors.any? %>
-  <div class="error-alert">
+  <div class="alert alert-danger">
     <ul>
       <% model.errors.full_messages.each do |message| %>
         <li class='error-message'><%= message %></li>
