--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <%= link_to '一覧', products_path, class: 'nav-link' %>
+              <%= link_to '商品一覧', products_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to '明細一覧', orders_path, class: 'nav-link' %>
             </li>
           </ul>
           <div class="d-flex">
