購入時に明細をメール送信する

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -41,7 +41,9 @@
       </div>
     </nav>
     <!-- Header-->
-    <p style="color: green"><%= notice %></p>
+    <% if notice %>
+      <p style="color: green"><%= notice %></p>
+    <% end %>
     <header class="bg-dark py-5">
       <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
