--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -38,7 +38,7 @@
               <td><%= link_to order.id, order_path(order) %></td>
               <td><%= "#{order.user.first_name}#{order.user.last_name}" %></td>
               <td><%= number_to_currency(order.total_price) %></td>
-              <td><%= order.order_date.strftime("%Y/%m/%d") %></td>
+              <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
             </tr>
           <% end %>
         </tbody>
