--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -24,7 +24,7 @@
     <div class="container mt-5">
       <h1>購入明細詳細</h1>
       <p>購入者名: <%= @order.user.first_name %> <%= @order.user.last_name %></p>
-      <p>購入日: <%= @order.order_date.strftime("%Y/%m/%d") %></p>
+      <p>購入日: <%= @order.created_at.strftime("%Y/%m/%d") %></p>
       <h2>購入品</h2>
       <table class="table">
         <thead>
