--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -11,7 +11,7 @@
               data: { turbo_frame: "_top" },
               class: 'btn btn-sm btn-outline-secondary' %>
 <span>
-  <%= "#{cart_item.product.price}円" %>
+  <%= number_to_currency(cart_item.product.price) %>
 </span>
 <%= button_to '削除', cart_item_path(cart_item, product_id: cart_item.product.id),
               method: :delete,
