--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,7 +29,7 @@
             </li>
           </ul>
           <div class="d-flex">
-            <%= link_to carts_path, class: 'btn btn-outline-dark' do %>
+            <%= link_to cart_path, class: 'btn btn-outline-dark' do %>
               <i class="bi-cart-fill me-1"></i>
               Cart
               <span class="badge bg-dark text-white ms-1 rounded-pill">
